--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -84,46 +84,43 @@
                 </div>
                 <div class="offcanvas-body">
                     <div class="ajax-cart-body">
-                        <div class="ajax-cart-list">
+                        <div class="ajax-cart-list" v-for="item of shoppingCart">
                             <div class="ajax-cart-item">
                                 <div class="ajax-cart-item-image-col ajax-cart-item-col">
-                                    <img class="img-responsive" src="./web/assets/images/BAGUES-Rio-ML-X-50.jpg"
-                                        title="">
+                                    <img class="img-responsive" :src="item.image">
                                 </div>
                                 <div class="ajax-cart-item-desc-col ajax-cart-item-col">
                                     <div class="ajax-cart-item-info">
-                                        <h6>Río Eau de parfum</h6>
-                                        <small>50ml</small>
-                                        <div>$6.599,00</div>
+                                        <h6>{{item.name}}</h6>
+                                        <small>{{item.content}} ml</small>
+                                        <div>US${{formatNumber(item.price)}}</div>
                                         <small class="messages-error" style="color:#f00;"></small>
                                     </div>
                                     <div class="box-quantity">
-                                        <a type="button"
+                                        <a v-if="item.quantity > 0" type="button"
                                             class="js-cart-quantity-btn cart-quantity-btn ajax-cart-quantity-btn"
-                                            id="cantidadMin_1362604" data-btn="restar">-</a>
+                                            id="cantidadMin_{{ item.id }}" data-btn="restar"
+                                            @click="decrementQuantity(item)">-</a>
                                         <div class="cart-quantity-input-container">
-                                            <input type="number"
+                                            <input :value="item.quantity" type="number"
                                                 class="js-cart-quantity-input cart-quantity-input count"
-                                                id="cantidad_1362604" value="1" pattern="" min="1" max="">
+                                                :id="'cantidad_' + item.id" pattern="" min="0" max="{{item.stock}}">
                                             <i class="fas fa-cog fa-spin cart-quantity-loading"
                                                 style="display: none;"></i>
                                         </div>
-                                        <a type="button"
+                                        <a v-if="item.stock > 0" type="button"
                                             class="js-cart-quantity-btn cart-quantity-btn ajax-cart-quantity-btn"
-                                            id="cantidadMax_1362604" data-btn="sumar">+</a>
-                                    </div>
-                                    <div class="item-quantity-available">
-                                        <p id="disponibles_1362604">
-                                            15 available </p>
+                                            :id="'cantidadMax_' + item.id" data-btn="sumar"
+                                            @click="addFromCart(item)">+</a>
                                     </div>
                                 </div>
                                 <div class="ajax-cart-item-subtotal ajax-cart-item-col cart-item-subtotal font-bold text-right"
                                     id="importeTotalProducto_1362604">
-                                    $6.599,00
+                                    US$ {{formatNumber(item.price * item.quantity)}}
                                 </div>
                                 <div class="ajax-cart-item-col">
-                                    <a type="button" class="js-cart-delete-btn cart-btn-delete pull-right"
-                                        id="eliminar_1362604">
+                                    <a @click="removeFromCart(item)" type="button"
+                                        class="js-cart-delete-btn cart-btn-delete pull-right">
                                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px"
                                             height="20px" viewBox="0 0 482.428 482.429"
@@ -149,29 +146,42 @@
                             </div>
 
                         </div>
-                        <div class="d-flex justify-content-end">
+                        <div v-if="shoppingCart.length > 0" class="d-flex justify-content-end">
                             <div class="font-bold text-right" style="margin-right: 1rem;" id="importeTotalPedido">
                                 Total
                             </div>
                             <div class=" font-bold text-right" id="importeTotalPedido">
-                                $6.599,00
+                                US$ {{formatNumber(totalPrice)}}
                             </div>
                         </div>
-                        <div class="ajax-cart-envio-gratuito" id="envioGratuito">
-                        </div>
                     </div>
-                    <input type="hidden" value="325116" id="idPedido">
-                    <div class="cart-empty text-center" style="display:none;">
-                        El carrito de compras está vacío.
+                    <div v-if="shoppingCart.length == 0" class="cart-empty text-center">
+                        The shopping cart is empty.
+                    </div>
+                    <div v-if="shoppingCart.length > 0" class="d-flex justify-content-end" style="margin: 1rem;">
+                        <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Buy</a>
+                    </div>
+                    <div v-if="shoppingCart.length == 0" class="d-flex justify-content-center" style="margin: 1rem;">
+                        <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Continue browsing</a>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <form class="d-flex search-form-overlay" role="search">
-                    <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button
-                        style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
-                        class="btn btn-outline-success button-search" type="button" @click="filterSearch">Search</button>
+                <form @submit.prevent="filterSearch" class="d-flex flex-column search-form-overlay justify-content-center align-items-center"
+                    role="search">
+                    <div class="d-flex">
+                        <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search"
+                            aria-label="Search" @keyup.enter="filterSearch">
+                        <button
+                            style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
+                            class="btn btn-outline-success button-search" type="button"
+                            @click="filterSearch">Search</button>
+                    </div>
+                    <div style="margin: 0.5rem;">
+                        <h6 v-if="errorSearch"
+                            style="background-color: black; color: red; border-radius: 0.5rem; padding: 0.3rem;">
+                            {{errorSearch}}</h6>
+                    </div>
                 </form>
             </div>
     </div>
@@ -258,7 +268,7 @@
                             <h5> Welcome to <span style="color: #ec225e; font-weight: 800;">Velvet Fragances</span>,
                                 where
                                 each aroma is an adventure.</h5>
-                            
+
                             <div class="d-flex justify-content-center">
                                 <a href="./web/assets/pages/fragances.html" class="btn mt-1 button-carrusel"
                                     style="background-color: #ec225e; color: #ffffff;">Buy Now</a>
@@ -281,14 +291,20 @@
                 </div>
             </div>
             <div class="olf-family d-flex justify-content-around gap-5 flex-wrap">
-                <img @click="filterByOlfactoryFamily(CITRUS)" class="img-olf" src="./web/assets/images/citrus.png" alt="citrus" style="width: 12rem; object-fit: contain;">
-                <img @click="filterByOlfactoryFamily(ORIENTAL)" class="img-olf" src="./web/assets/images/oriental.png" alt="oriental" style="width: 12rem; object-fit: contain;">
-                <img @click="filterByOlfactoryFamily(FOUGERE)" class="img-olf" src="./web/assets/images/fougére.png" alt="fougére" style="width: 12rem; object-fit: contain;">
-                <img @click="filterByOlfactoryFamily(FLOWERY)" class="img-olf" src="./web/assets/images/flowery.png" alt="flowery" style="width: 12rem; object-fit: contain;">
-                <img @click="filterByOlfactoryFamily(WOODY)" class="img-olf" src="./web/assets/images/woody.png" alt="woody" style="width: 12rem; object-fit: contain;">
-                <img @click="filterByOlfactoryFamily(CHYPRE)" class="img-olf" src="./web/assets/images/chypre.png" alt="chypre" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(CITRUS)" class="img-olf" src="./web/assets/images/citrus.png"
+                    alt="citrus" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(ORIENTAL)" class="img-olf" src="./web/assets/images/oriental.png"
+                    alt="oriental" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(FOUGERE)" class="img-olf" src="./web/assets/images/fougére.png"
+                    alt="fougére" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(FLOWERY)" class="img-olf" src="./web/assets/images/flowery.png"
+                    alt="flowery" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(WOODY)" class="img-olf" src="./web/assets/images/woody.png"
+                    alt="woody" style="width: 12rem; object-fit: contain;">
+                <img @click="filterByOlfactoryFamily(CHYPRE)" class="img-olf" src="./web/assets/images/chypre.png"
+                    alt="chypre" style="width: 12rem; object-fit: contain;">
             </div>
-            
+
         </div>
     </main>
     <footer>
@@ -301,15 +317,12 @@
                     </a>
                     <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
                     <div class="d-flex justify-content-start">
-                        <a class="btn btn-square mr-2 button-footer"
-                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
-                                class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square mr-2 button-footer"
-                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square mr-2 button-footer"
-                            style="color: #ec225e; border: solid 1px #ec225e;" href="#"><i
-                                class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
+                            href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
+                            href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square mr-2 button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
+                            href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-square button-footer" style="color: #ec225e; border: solid 1px #ec225e;"
                             href="#"><i class="fab fa-instagram"></i></a>
                     </div>
@@ -318,13 +331,11 @@
                     <div class="col-lg-3 col-md-6 mb-5">
                         <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Pages</h5>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="#"><i
-                                    class="fa fa-angle-right mr-2"></i>Products</a>
+                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Products</a>
                             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About
                                 Us</a>
                             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
-                            <a class="text-white-50 mb-2" href="#"><i
-                                    class="fa fa-angle-right mr-2"></i>Testimonial</a>
+                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
                             <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Gif
                                 Cards</a>
                         </div>
