--- a/src/main/resources/static/web/assets/pages/air-fresheners.html
+++ b/src/main/resources/static/web/assets/pages/air-fresheners.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velvet Fragances - Homme</title>
+    <title>Velvet airFresheners - Homme</title>
     <link rel="stylesheet" href="../style/style.css">
     <link rel="shortcut icon" href="./web/assets/images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color: #020305;">
                 <div class="container-fluid">
-                    <img src="../images/logo 2.png" alt="" style="width: 13%;">
+                    <img src="../images/logo 2.png" alt="" style="width: 13%;" href="../../../index.html">
                     <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#" style="color: aliceblue;">About
+                                <a class="nav-link active" aria-current="page" href="../../../index.html#AboutUs" style="color: aliceblue;">About
                                     Us</a>
                             </li>
                             <li class="nav-item">
@@ -68,7 +68,7 @@
                         <path
                             d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
                     </svg></button>
-                    <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
+                <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
             </nav>
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
@@ -78,45 +78,43 @@
                 </div>
                 <div class="offcanvas-body">
                     <div class="ajax-cart-body">
-                        <div class="ajax-cart-list">
+                        <div class="ajax-cart-list" v-for="item of shoppingCart">
                             <div class="ajax-cart-item">
                                 <div class="ajax-cart-item-image-col ajax-cart-item-col">
-                                    <img class="img-responsive" src="../images/BAGUES-Rio-ML-X-50.jpg" title="">
+                                    <img class="img-responsive" :src="item.image">
                                 </div>
                                 <div class="ajax-cart-item-desc-col ajax-cart-item-col">
                                     <div class="ajax-cart-item-info">
-                                        <h6>Río Eau de parfum</h6>
-                                        <small>50ml</small>
-                                        <div>$6.599,00</div>
+                                        <h6>{{item.name}}</h6>
+                                        <small>{{item.content}} ml</small>
+                                        <div>US${{formatNumber(item.price)}}</div>
                                         <small class="messages-error" style="color:#f00;"></small>
                                     </div>
                                     <div class="box-quantity">
-                                        <a type="button"
+                                        <a v-if="item.quantity > 0" type="button"
                                             class="js-cart-quantity-btn cart-quantity-btn ajax-cart-quantity-btn"
-                                            id="cantidadMin_1362604" data-btn="restar">-</a>
+                                            id="cantidadMin_{{ item.id }}" data-btn="restar"
+                                            @click="decrementQuantity(item)">-</a>
                                         <div class="cart-quantity-input-container">
-                                            <input type="number"
+                                            <input :value="item.quantity" type="number"
                                                 class="js-cart-quantity-input cart-quantity-input count"
-                                                id="cantidad_1362604" value="1" pattern="" min="1" max="">
+                                                :id="'cantidad_' + item.id" pattern="" min="0" max="{{item.stock}}">
                                             <i class="fas fa-cog fa-spin cart-quantity-loading"
                                                 style="display: none;"></i>
                                         </div>
-                                        <a type="button"
+                                        <a v-if="item.stock > 0" type="button"
                                             class="js-cart-quantity-btn cart-quantity-btn ajax-cart-quantity-btn"
-                                            id="cantidadMax_1362604" data-btn="sumar">+</a>
-                                    </div>
-                                    <div class="item-quantity-available">
-                                        <p id="disponibles_1362604">
-                                            15 available </p>
+                                            :id="'cantidadMax_' + item.id" data-btn="sumar"
+                                            @click="addFromCart(item)">+</a>
                                     </div>
                                 </div>
                                 <div class="ajax-cart-item-subtotal ajax-cart-item-col cart-item-subtotal font-bold text-right"
                                     id="importeTotalProducto_1362604">
-                                    $6.599,00
+                                    US$ {{formatNumber(item.price * item.quantity)}}
                                 </div>
                                 <div class="ajax-cart-item-col">
-                                    <a type="button" class="js-cart-delete-btn cart-btn-delete pull-right"
-                                        id="eliminar_1362604">
+                                    <a @click="removeFromCart(item)" type="button"
+                                        class="js-cart-delete-btn cart-btn-delete pull-right">
                                         <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px"
                                             height="20px" viewBox="0 0 482.428 482.429"
@@ -142,29 +140,42 @@
                             </div>
 
                         </div>
-                        <div class="d-flex justify-content-end">
+                        <div v-if="shoppingCart.length > 0" class="d-flex justify-content-end">
                             <div class="font-bold text-right" style="margin-right: 1rem;" id="importeTotalPedido">
                                 Total
                             </div>
                             <div class=" font-bold text-right" id="importeTotalPedido">
-                                $6.599,00
+                                US$ {{formatNumber(totalPrice)}}
                             </div>
                         </div>
-                        <div class="ajax-cart-envio-gratuito" id="envioGratuito">
-                        </div>
                     </div>
-                    <input type="hidden" value="325116" id="idPedido">
-                    <div class="cart-empty text-center" style="display:none;">
-                        El carrito de compras está vacío.
+                    <div v-if="shoppingCart.length == 0" class="cart-empty text-center">
+                        The shopping cart is empty.
+                    </div>
+                    <div v-if="shoppingCart.length > 0" class="d-flex justify-content-end" style="margin: 1rem;">
+                        <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Buy</a>
+                    </div>
+                    <div v-if="shoppingCart.length == 0" class="d-flex justify-content-center" style="margin: 1rem;">
+                        <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Continue browsing</a>
                     </div>
                 </div>
             </div>
             <div class="d-flex justify-content-center">
-                <form class="d-flex search-form-overlay" role="search">
-                    <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button
-                        style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
-                        class="btn btn-outline-success button-search" type="submit" @click="filterSearch">Search</button>
+                <form @submit.prevent="filterSearch" class="d-flex flex-column search-form-overlay justify-content-center align-items-center"
+                    role="search">
+                    <div class="d-flex">
+                        <input v-model="valueSearch" class="form-control me-2" type="search" placeholder="Search"
+                            aria-label="Search" @keyup.enter="filterSearch">
+                        <button
+                            style="color: aliceblue; background-color: #fbb002d4; border: solid 2px #fbb002d4; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);"
+                            class="btn btn-outline-success button-search" type="button"
+                            @click="filterSearch">Search</button>
+                    </div>
+                    <div style="margin: 0.5rem;">
+                        <h6 v-if="errorSearch"
+                            style="background-color: black; color: red; border-radius: 0.5rem; padding: 0.3rem;">
+                            {{errorSearch}}</h6>
+                    </div>
                 </form>
             </div>
 
@@ -240,59 +251,25 @@
                         style="background-color:#020305; color:#ffffff;">Search</a>
                 </div>
                 <div class="d-flex flex-wrap justify-content-around" style="margin-top: 1rem;">
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/aromatizante-rosa-y-violeta.png" class="card-img-top" alt="...">
+                    <div class="card container-img-body m-3" v-for="airFreshener of airFresheners"
+                        style="width: 20rem;">
+                        <h5
+                            style="color: #ec225e; font-weight: 700; display: flex; justify-content: end; margin: 1rem;">
+                            Stock: {{airFreshener.stock}}</h5>
+                        <img :src="airFreshener.image" class="card-img-top card-image-me"
+                            style="height: 15rem; object-fit: contain;">
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
+                            <h5 class="card-title" style="text-align: center;">{{airFreshener.name}}
+                                ({{airFreshener.content}}ml)</h5>
+                            <h5 style="color: #ec225e; text-align: center;">US$ {{formatNumber(airFreshener.price)}}</h5>
+                            <p
+                                style="text-align: center; white-space: pre-line; overflow: hidden; text-overflow: ellipsis; -webkit-line-clamp: 2; -webkit-box-orient: vertical; display: -webkit-box;">
+                                {{airFreshener.description}}</p>
                             <div class="d-flex justify-content-around">
-                                <a :href="'./detailsAirFresheners.html?id=' + airFreshener.id" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/aromatizante-rosa-y-violeta.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/aromatizante-rosa-y-violeta.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card container-img-body m-3" style="width: 20rem;">
-                        <img src="../images/aromatizante-rosa-y-violeta.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the
-                                card's content.</p>
-                            <div class="d-flex justify-content-around">
-                                <a href="#" class="btn" style="background-color:#020305; color:#ffffff;">Details</a>
-                                <a href="#" class="btn" style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
+                                <a :href="'./detailsAirFresheners.html?id=' + airFreshener.id" class="btn"
+                                    style="background-color:#020305; color:#ffffff;">Details</a>
+                                <a v-if="airFreshener.stock > 0" @click="addFromCart(airFreshener)" class="btn"
+                                    style="background-color:#ec225e; color:#ffffff;">Add to cart</a>
                             </div>
                         </div>
                     </div>
@@ -341,7 +318,7 @@
                             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
                             <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
                             <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                            <p><i class="fa fa-envelope mr-2"></i>velvetfragances@gmail.com</p>
+                            <p><i class="fa fa-envelope mr-2"></i>velvetairFresheners@gmail.com</p>
                         </div>
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.543028422734!2d-111.61325043503413!3d35.212922840097946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872d8ed73ade55ed%3A0x69dde6ff2b6b92df!2sThe%20UPS%20Store!5e0!3m2!1ses!2sar!4v1700769820848!5m2!1ses!2sar"
@@ -351,7 +328,7 @@
                 </div>
                 <div class="row" style="margin-top: 2rem;">
                     <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                        <p class="m-0">Copyright &copy; <a style="color: #ec225e;" href="#">VelvetFragances</a>. All
+                        <p class="m-0">Copyright &copy; <a style="color: #ec225e;" href="#">VelvetairFresheners</a>. All
                             Rights
                             Reserved.</a>
                         </p>
