--- a/src/main/resources/static/web/assets/pages/log-in.html
+++ b/src/main/resources/static/web/assets/pages/log-in.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color:#020305;">
                 <div class="container-fluid">
-                    <img src="../images/logo 2.png" alt="" style="width: 13%;">
+                    <img src="../images/logo 2.png" alt="" style="width: 13%;" href="../../../index.html">
                     <a class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
                                 </ul>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#AboutUs"
+                                <a class="nav-link active" aria-current="page" href="../../../index.html#AboutUs"
                                     style="color: aliceblue;">About
                                     Us</a>
                             </li>
