--- a/src/main/resources/static/web/assets/pages/creams.html
+++ b/src/main/resources/static/web/assets/pages/creams.html
@@ -15,7 +15,7 @@
 </head>
 
 <body style="background-color: #d2d2d2;">
-    <div id="app">
+    <div id="app" v-cloak>
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color: #020305;">
                 <div class="container-fluid">
@@ -59,8 +59,21 @@
                                 <a class="nav-link active" aria-current="page" href="#Contact"
                                     style="color: aliceblue;">Contact</a>
                             </li>
+                            <li class="nav-item">
+                                <a v-if="email.includes('velvetadm')" class="nav-link active" aria-current="page" href="../../../administrator/assets/pages/create-products.html"
+                                    style="color: aliceblue;">Administrator</a>
+                            </li>
                         </ul>
                     </div>
+                </div>
+                <div class="d-flex" style="gap: 1rem;">
+                    <h5 v-if="email" style="color: #fbb002d4; font-weight: 500; width: 8rem;">Hi, {{client.firstName}} !</h5>
+                    <a v-if="!email" href="./web/assets/pages/log-in.html"
+                        style="color: #ec225e; cursor: pointer; font-weight: 500;">LogIn</a>
+                    <a v-if="!email" href="./web/assets/pages/register.html"
+                        style="color: #ec225e; cursor: pointer; font-weight: 500">Register</a>
+                    <a v-if="email"  @click="logOut" style="color: #ec225e; cursor: pointer; font-weight: 500">LogOut</a>
+
                 </div>
                 <button class="btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
                     aria-controls="offcanvasScrolling"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
@@ -68,7 +81,6 @@
                         <path
                             d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l1.25 5h8.22l1.25-5H3.14zM5 13a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0" />
                     </svg></button>
-                    <a @click="logOut" style="color: #ec225e; cursor: pointer;">Log Out</a>
             </nav>
             <div class="offcanvas offcanvas-end" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
                 id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
