--- a/src/main/resources/static/web/assets/pages/register.html
+++ b/src/main/resources/static/web/assets/pages/register.html
@@ -14,7 +14,7 @@
 </head>
 
 <body style="background-color: #d2d2d2;">
-    <div id="app">
+    <div id="app" v-cloak>
         <header>
             <nav class="navbar navbar-expand-lg" style="background-color:#020305;">
                 <div class="container-fluid">
